learned how to drag and drop between multiple sections

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.16.4",
     "path": "^0.12.7",
     "react": "^16.8.4",
+    "react-beautiful-dnd": "^11.0.1",
     "react-dom": "^16.8.4",
     "react-redux": "^7.0.2",
     "redux": "^4.0.1",
