--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "express": "^4.16.4",
+    "nodemon": "^1.18.11",
     "path": "^0.12.7",
     "react": "^16.8.4",
     "react-beautiful-dnd": "^11.0.1",
